--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -58,24 +58,26 @@ $(function(){
     <fieldset class="fset"><legend>제품등록</legend>
     <fieldset class="fset"><legend>회사</legend>
     <label for="company">Intel</label>
-    <input class="id_form" type="radio" name="company" value="intel" checked/>
+    <input class="id_form" type="radio" name="company" value="Intel" checked/>
     <label for="company">AMD</label>
-    <input class="id_form" type="radio" name="company" value="amd"/></fieldset>
+    <input class="id_form" type="radio" name="company" value="AMD"/></fieldset>
     <fieldset class="fset"><legend>세대</legend>
-    <label for="generation">인텔3세대</label>
-    <input class="id_form" type="radio" name="generation" value="인텔3세대" checked/>
-    <label for="generation">인텔5세대</label>
-    <input class="id_form" type="radio" name="generation" value="인텔5세대"/>
-    <label for="generation">인텔7세대</label>
-    <input class="id_form" type="radio" name="generation" value="인텔7세대"/>
-    <label for="generation">인텔9세대</label>
-    <input class="id_form" type="radio" name="generation" value="인텔9세대"/>
-    <label for="generation">암드1세대</label>
-    <input class="id_form" type="radio" name="generation" value="암드1세대"/>
-    <label for="generation">암드2세대</label>
-    <input class="id_form" type="radio" name="generation" value="암드2세대"/>
-    <label for="generation">암드3세대</label>
-    <input class="id_form" type="radio" name="generation" value="암드3세대"/>
+    <label for="generation">코어i3</label>
+    <input class="id_form" type="radio" name="generation" value="코어i3" checked/>
+    <label for="generation">코어i5</label>
+    <input class="id_form" type="radio" name="generation" value="코어i5"/>
+    <label for="generation">코어i7</label>
+    <input class="id_form" type="radio" name="generation" value="코어i7"/>
+    <label for="generation">코어i9</label>
+    <input class="id_form" type="radio" name="generation" value="코어i9"/>
+    <label for="generation">라이젠 3</label>
+    <input class="id_form" type="radio" name="generation" value="라이젠 3"/>
+    <label for="generation">라이젠 5</label>
+    <input class="id_form" type="radio" name="generation" value="라이젠 5"/>
+    <label for="generation">라이젠 7</label>
+    <input class="id_form" type="radio" name="generation" value="라이젠 7"/>
+    <label for="generation">라이젠 9</label>
+    <input class="id_form" type="radio" name="generation" value="라이젠 9"/>
     </fieldset>
     <fieldset class="fset"><legend>코어</legend>
     <label for="core">2코어</label>
