--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -63,49 +63,49 @@ $(function(){
     <input class="id_form" type="radio" name="company" value="AMD"/></fieldset>
     <fieldset class="fset"><legend>세대</legend>
     <label for="generation">코어i3</label>
-    <input class="id_form" type="radio" name="generation" value="코어i3" checked/>
+    <input class="id_form" type="radio" name="generation" value="i3" checked/>
     <label for="generation">코어i5</label>
-    <input class="id_form" type="radio" name="generation" value="코어i5"/>
+    <input class="id_form" type="radio" name="generation" value="i5"/>
     <label for="generation">코어i7</label>
-    <input class="id_form" type="radio" name="generation" value="코어i7"/>
+    <input class="id_form" type="radio" name="generation" value="i7"/>
     <label for="generation">코어i9</label>
-    <input class="id_form" type="radio" name="generation" value="코어i9"/>
+    <input class="id_form" type="radio" name="generation" value="i9"/>
     <label for="generation">라이젠 3</label>
-    <input class="id_form" type="radio" name="generation" value="라이젠 3"/>
+    <input class="id_form" type="radio" name="generation" value="라이젠3"/>
     <label for="generation">라이젠 5</label>
-    <input class="id_form" type="radio" name="generation" value="라이젠 5"/>
+    <input class="id_form" type="radio" name="generation" value="라이젠5"/>
     <label for="generation">라이젠 7</label>
-    <input class="id_form" type="radio" name="generation" value="라이젠 7"/>
+    <input class="id_form" type="radio" name="generation" value="라이젠7"/>
     <label for="generation">라이젠 9</label>
-    <input class="id_form" type="radio" name="generation" value="라이젠 9"/>
+    <input class="id_form" type="radio" name="generation" value="라이젠9"/>
     </fieldset>
     <fieldset class="fset"><legend>코어</legend>
     <label for="core">2코어</label>
-    <input class="id_form" type="radio" name="core" value="2코어" checked/>
+    <input class="id_form" type="radio" name="core" value="2" checked/>
     <label for="core">4코어</label>
-    <input class="id_form" type="radio" name="core" value="4코어"/>
+    <input class="id_form" type="radio" name="core" value="4"/>
     <label for="core">6코어</label>
-    <input class="id_form" type="radio" name="core" value="6코어"/>
+    <input class="id_form" type="radio" name="core" value="6"/>
     <label for="core">8코어</label>
-    <input class="id_form" type="radio" name="core" value="8코어"/>
+    <input class="id_form" type="radio" name="core" value="8"/>
     <label for="core">12코어</label>
-    <input class="id_form" type="radio" name="core" value="12코어"/>
+    <input class="id_form" type="radio" name="core" value="12"/>
     </fieldset>
     <fieldset class="fset"><legend>쓰레드</legend>
     <label for="thread">2쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="2쓰레드" checked/>
+    <input class="id_form" type="radio" name="thread" value="2" checked/>
     <label for="thread">4쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="4쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="4"/>
     <label for="thread">6쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="6쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="6"/>
     <label for="thread">8쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="8쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="8"/>
     <label for="thread">12쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="12쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="12"/>
     <label for="thread">16쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="16쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="16"/>
     <label for="thread">24쓰레드</label>
-    <input class="id_form" type="radio" name="thread" value="24쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="24"/>
     </fieldset>
     <fieldset class="fset"><legend>기본 클럭</legend>
     <label for="clock">4.0~4.49GHz</label>
