--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -90,6 +90,10 @@ $(function(){
     <input class="id_form" type="radio" name="core" value="8"/>
     <label for="core">12코어</label>
     <input class="id_form" type="radio" name="core" value="12"/>
+    <label for="core">16코어</label>
+    <input class="id_form" type="radio" name="core" value="16"/>
+    <label for="core">24코어</label>
+    <input class="id_form" type="radio" name="core" value="24"/>
     </fieldset>
     <fieldset class="fset"><legend>쓰레드</legend>
     <label for="thread">2쓰레드</label>
@@ -106,6 +110,10 @@ $(function(){
     <input class="id_form" type="radio" name="thread" value="16"/>
     <label for="thread">24쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="24"/>
+    <label for="thread">32쓰레드</label>
+    <input class="id_form" type="radio" name="thread" value="32"/>
+    <label for="thread">48쓰레드</label>
+    <input class="id_form" type="radio" name="thread" value="48"/>
     </fieldset>
     <fieldset class="fset"><legend>기본 클럭</legend>
     <label for="clock">4.0~4.49GHz</label>
