--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -78,6 +78,8 @@ $(function(){
     <input class="id_form" type="radio" name="generation" value="라이젠7"/>
     <label for="generation">라이젠 9</label>
     <input class="id_form" type="radio" name="generation" value="라이젠9"/>
+    <label for="generation">라이젠 쓰레드리퍼</label>
+    <input class="id_form" type="radio" name="generation" value="라이젠쓰레드리퍼"/>
     </fieldset>
     <fieldset class="fset"><legend>코어</legend>
     <label for="core">2코어</label>
