--- a/homework/CPUHome.html
+++ b/homework/CPUHome.html
@@ -23,7 +23,7 @@ ul.level_1 > li > ul {list-style:none;}
 #loginBtn button {margin-left:5px; height:42px;}
 </style><title>웹서버 프로그래밍</title></head>
 <body><header><img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
-<h2>CPU관리</h2></header>
+<h2>CPU관리에 오신 것을 환영합니다</h2></header>
 <nav><ul>
 <li><a href="./CPUFind.html">제품검색</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
 <section>
