--- a/homework/CPUFind.html
+++ b/homework/CPUFind.html
@@ -33,6 +33,7 @@ ul.level_1 > li > ul {list-style:none;}
   <select name="search_select">
     <option value="stud_all" selected>전체</option>
     <option value="company">회사</option>
+    <option value="generation">세대</option>
     <option value="core">코어</option>
   </select>
   <input id="find_form" type="text" name="stud_search" size="20" maxlength="50"/>
