--- a/homework/CPUFind.html
+++ b/homework/CPUFind.html
@@ -32,6 +32,7 @@ ul.level_1 > li > ul {list-style:none;}
   <fieldset class="fset"><legend>검색</legend>
   <select name="search_select">
     <option value="stud_all" selected>전체</option>
+    <option value="name">제품명</option>
     <option value="company">회사</option>
     <option value="generation">세대</option>
     <option value="core">코어</option>
