--- a/homework/CPUHome.html
+++ b/homework/CPUHome.html
@@ -27,6 +27,6 @@ ul.level_1 > li > ul {list-style:none;}
 <nav><ul>
 <li><a href="./CPUFind.html">제품검색</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
 <section>
-<img src="https://dmsdn0101.github.io/homework/picture/intelamd.png" height="auto" width="100%">
+<img src="https://dmsdn0101.github.io/homework/picture/intelamd.png" height="300px" width="100%">
 </section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
