--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -64,56 +64,78 @@ $(function(){
     <fieldset class="fset"><legend>세대</legend>
     <label for="generation">코어i3</label>
     <input class="id_form" type="radio" name="generation" value="i3" checked/>
+    <span>|</span>
     <label for="generation">코어i5</label>
     <input class="id_form" type="radio" name="generation" value="i5"/>
+    <span>|</span>
     <label for="generation">코어i7</label>
     <input class="id_form" type="radio" name="generation" value="i7"/>
+    <span>|</span>
     <label for="generation">코어i9</label>
     <input class="id_form" type="radio" name="generation" value="i9"/>
+    <span>|</span>
     <label for="generation">라이젠 3</label>
     <input class="id_form" type="radio" name="generation" value="라이젠3"/>
+    <span>|</span>
     <label for="generation">라이젠 5</label>
     <input class="id_form" type="radio" name="generation" value="라이젠5"/>
+    <span>|</span>
     <label for="generation">라이젠 7</label>
     <input class="id_form" type="radio" name="generation" value="라이젠7"/>
+    <span>|</span>
     <label for="generation">라이젠 9</label>
     <input class="id_form" type="radio" name="generation" value="라이젠9"/>
+    <span>|</span>
     <label for="generation">라이젠 쓰레드리퍼</label>
     <input class="id_form" type="radio" name="generation" value="라이젠쓰레드리퍼"/>
     </fieldset>
     <fieldset class="fset"><legend>코어</legend>
     <label for="core">2코어</label>
     <input class="id_form" type="radio" name="core" value="2" checked/>
+    <span>|</span>
     <label for="core">4코어</label>
     <input class="id_form" type="radio" name="core" value="4"/>
+    <span>|</span>
     <label for="core">6코어</label>
     <input class="id_form" type="radio" name="core" value="6"/>
+    <span>|</span>
     <label for="core">8코어</label>
     <input class="id_form" type="radio" name="core" value="8"/>
+    <span>|</span>
     <label for="core">12코어</label>
     <input class="id_form" type="radio" name="core" value="12"/>
+    <span>|</span>
     <label for="core">16코어</label>
     <input class="id_form" type="radio" name="core" value="16"/>
+    <span>|</span>
     <label for="core">24코어</label>
     <input class="id_form" type="radio" name="core" value="24"/>
     </fieldset>
     <fieldset class="fset"><legend>쓰레드</legend>
     <label for="thread">2쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="2" checked/>
+    <span>|</span>
     <label for="thread">4쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="4"/>
+    <span>|</span>
     <label for="thread">6쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="6"/>
+    <span>|</span>
     <label for="thread">8쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="8"/>
+    <span>|</span>
     <label for="thread">12쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="12"/>
+    <span>|</span>
     <label for="thread">16쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="16"/>
+    <span>|</span>
     <label for="thread">24쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="24"/>
+    <span>|</span>
     <label for="thread">32쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="32"/>
+    <span>|</span>
     <label for="thread">48쓰레드</label>
     <input class="id_form" type="radio" name="thread" value="48"/>
     </fieldset>
