--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -59,6 +59,7 @@ $(function(){
     <fieldset class="fset"><legend>회사</legend>
     <label for="company">Intel</label>
     <input class="id_form" type="radio" name="company" value="Intel" checked/>
+    <span>|</span>
     <label for="company">AMD</label>
     <input class="id_form" type="radio" name="company" value="AMD"/></fieldset>
     <fieldset class="fset"><legend>세대</legend>
@@ -142,8 +143,10 @@ $(function(){
     <fieldset class="fset"><legend>기본 클럭</legend>
     <label for="clock">4.0~4.49GHz</label>
     <input class="id_form" type="radio" name="clock" value="4.0~4.49GHz" checked/>
+    <span>|</span>
     <label for="clock">3.0~3.99GHz</label>
     <input class="id_form" type="radio" name="clock" value="3.0~3.99GHz"/>
+    <span>|</span>
     <label for="clock">2.0~2.99GHz</label>
     <input class="id_form" type="radio" name="clock" value="2.0~2.99GHz"/>
     </fieldset>
