--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </li>
     <li id="week01">13주
     <ol type="1">
-      <li><a href="https://dmsdn0101.github.io/homework/CPUHome.html" target="_blank">CPU관리 </a></li>
+      <li><a href="https://dmsdn0101.github.io/homework/CPUHome.html" target="_blank">CPU관리 홈페이지</a></li>
     </ol>
     </li>
     </ul>
