--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -21,6 +21,8 @@ ul.level_1 > li > ul {list-style:none;}
 .level_2 span {display:inline-block; width:70px;}
 .level_2 input {width:100px;}
 #loginBtn button {margin-left:5px; height:42px;}
+color {color:blue;}
+color2 {color:red;}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
@@ -57,10 +59,10 @@ $(function(){
   <form action="http://203.237.142.245/~s20151671/homework/beanReg.jsp" method="post">
     <fieldset class="fset"><legend>제품등록</legend>
     <fieldset class="fset"><legend>회사</legend>
-    <label for="company">Intel</label>
+    <label for="company"><img src="https://dmsdn0101.github.io/homework/picture/intel.png" height="30px" width="30px"><color>Intel</color></label>
     <input class="id_form" type="radio" name="company" value="Intel" checked/>
     <span>|</span>
-    <label for="company">AMD</label>
+    <label for="company"><img src="https://dmsdn0101.github.io/homework/picture/amd.png" height="30px" width="30px"><color2>AMD</color2></label>
     <input class="id_form" type="radio" name="company" value="AMD"/></fieldset>
     <fieldset class="fset"><legend>세대</legend>
     <label for="generation">코어i3</label>
