--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -2,7 +2,7 @@
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <style> * {padding:0; margin:0;}
 body {font-family: Verdana, sans-serif; font-size:0.8em;}
-header, nav, section, article, aside, footer {border:1px solid gray; margin:5px; padding:8px;}
+header, nav, section, article, aside, footer {border:1px solid black; margin:5px; padding:8px;}
 nav ul{margin:0; padding:0;}
 nav ul li{display:inline; margin:5px;}
 a:link { color:blue; text-decoration:none; }
